starlark-rust/starlark/src/typing/tests/golden/call_not_callable.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
def foo(x: list):
    x()

Error:
error: Call to a non-callable type `list`
 --> filename:3:5
  |
3 |     x()
  |     ^^^
  |

Compiler typechecker (eval):
error: Call to a non-callable type `list`
 --> filename:3:5
  |
3 |     x()
  |     ^^^
  |
